add info add todos add shortcuts in item view

--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -6,7 +6,7 @@
 include::partial$hinweis-voraussetzungen.adoc[]
 include::partial$hinweis-offene-beta.adoc[]
 
-Mit der rollenden Kommissionierung können deine deine Mitarbeiter:innen im Lager mehrere Aufträge gleichzeitig picken und versandfertig vorsortiert an den Packtisch liefern.
+Mit der rollenden Kommissionierung können deine Mitarbeiter:innen im Lager mehrere Aufträge gleichzeitig picken und versandfertig vorsortiert an den Packtisch liefern.
 
 Die plentyWarehouse App bietet dir eine überarbeitete und optimierte Funktion zur rollenden Kommissionierung. Auf dieser Handbuchseite findest du alle notwendigen Informationen.
 
@@ -73,11 +73,9 @@ Bevor die rollende Kommissionierung mit plentyWarehouse durchgeführt wird, muss
 
 include::_includes:page$rechte.adoc[]
 
-
-//// 
-
 [#600]
 ==== Abwicklungsprozesse anpassen
+//TODO: Haben wir sowas für Prozesse?
 
 Der Packvorgang der rollenden Kommissionierung kann im bestehenden xref:automatisierung:prozesse-einrichten.adoc#[Auftragsabwicklungsprozess] deines Unternehmens integriert werden. Dazu müssen jeweils eine Aktion und eine Subaktion zum bestehenden Abwicklungsprozess hinzugefügt werden.
 
@@ -102,40 +100,35 @@ Bestehende Abwicklungsprozesse anpassen:
 |Füge die Subaktion xref:automatisierung:subaktionen.adoc#195[Entferne Auftrag von Box] zur Aktion xref:automatisierung:aktionen.adoc#170[Auftrag] hinzu. Diese Subaktion löst die Verbindung zwischen Auftrag und Box. Somit steht die Box wieder frei zur Verfügung und kann beim nächsten Durchlauf wiederverwendet werden.
 |====
 
-[TIP]
-.Beispielprozess
-====
-Hast du noch keinen bestehenden Abwicklungsprozess, den du anpassen kannst? Oder willst du die Aktion und Subaktion im Kontext eines Beispielprozesses sehen? Kein Problem! Wir bieten dir ein Beispielprozess für die rollende Kommissionierung an.
-
-Importdatei für den Prozess:
-link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentyprocess/rollende_Box-Kommissionierung_2019_08_23_13_49_13.plentyprocess[rollende_Box-Kommissionierung_2019_08_23_13_49_13.plentyprocess]
-
-Nach dem xref:automatisierung:prozesse-einrichten.adoc#220[Import des Prozesses] müssen folgende Einstellungen geprüft und angepasst werden:
-
-* Öffne die xref:automatisierung:prozesse-einrichten.adoc#65[Einstellungen des Prozesses] und wähle das richtige Lager.
-* Öffne die beiden xref:automatisierung:aktionen.adoc#550[Split-Steuerelemente] und wähle jeweils den korrekten Status.
-* Öffne das xref:automatisierung:aktionen.adoc#510[Filter-Steuerelement] und wähle *Fortschritt: Vollständig erfasst*.
-====
-
 [#700]
-=== Einstellungen in der plentymarkets App vornehmen
+=== Einstellungen in der plentyWarehouse App vornehmen
 
-Bevor du <<#800, die rollende Kommissionierung nutzen kannst>>, musst du ein paar Einstellungen einmalig in der plentymarkets App vornehmen. Diese Einstellungen bestimmen z.B., wie viele Aufträge auf einmal gepickt werden sollen und wie die App im Fehlerfall vorgehen soll.
+//TODO: Settings Menü beschreiben; Screenshot
+
+Bevor du <<#800, die rollende Kommissionierung nutzen kannst>>, musst du ein paar Einstellungen einmalig in der plentyWarehouse App vornehmen. Diese Einstellungen bestimmen z.B., wie viele Aufträge auf einmal gepickt werden sollen und wie die App im Fehlerfall vorgehen soll.
 
 [.instruction]
 Einstellungen vornehmen:
 
-. xref:app:installation.adoc#1200[Melde dich in der plentymarkets App an].
-. Tippe oben links auf das *Menüsymbol* (icon:bars[role="blue"]).
-. Tippe auf *Einstellungen » Rollende Kommissionierung*. +
-→ Die Einstellungen zur rollenden Kommissionierung werden geöffnet.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-settings-box-picking>>.
+. xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
+. Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
+. Tippe unten auf *Einstellungen* (icon:settings[set=material]). +
+→ Das Einstellungsmenü öffnet sich.
+. Tippe auf *Rollende Kommissionierung*.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-pw-settings-box-picking>>.
 
-[[table-settings-box-picking]]
+[[table-pw-settings-box-picking]]
 .Einstellungen in der plentymarkets App vornehmen
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
+
+| *Lager*
+|In welchem Lager möchtest du picken? Wenn du die rollende Kommissionierung später nutzt, werden nur Aufträge, die sich in diesem Lager befinden, auf deiner Artikelliste angezeigt. +
+*_Tipp:_* Die xref:warenwirtschaft:lager-einrichten.adoc#200[Lager] in dieser Dropdown-Liste können unter *Einrichtung » Waren » Lager* verwaltet werden.
+
+| *Standardanzahl Boxen*
+|Wie viele Aufträge möchtest du standardmäßig auf einmal picken? Wenn du die rollende Kommissionierung später nutzt, ist die hier ausgewählte Anzahl voreingestellt. Während der Nutzung kannst du die Anzahl jedoch manuell erhöhen oder verringern.
 
 | *Ausgangsstatus*
 |Welche Aufträge möchtest du picken? Wenn du die rollende Kommissionierung später nutzt, werden nur Aufträge, die sich in diesem Status befinden, auf deiner Artikelliste angezeigt. +
@@ -149,44 +142,37 @@ Einstellungen vornehmen:
 |Wie soll die App im Fehlerfall vorgehen? Kommt es beim Picken eines Auftrags zu einem Fehler, wird der Auftrag in den hier ausgewählten Status gesetzt. Später kannst du dann in plentymarkets alle fehlerhaften Aufträge anhand des Status suchen und diese gesondert abarbeiten. +
 *_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste können unter *Einrichtung » Aufträge » Status* verwaltet werden.
 
-| *Lager*
-|In welchem Lager möchtest du picken? Wenn du die rollende Kommissionierung später nutzt, werden nur Aufträge, die sich in diesem Lager befinden, auf deiner Artikelliste angezeigt. +
-*_Tipp:_* Die xref:warenwirtschaft:lager-einrichten.adoc#200[Lager] in dieser Dropdown-Liste können unter *Einrichtung » Waren » Lager* verwaltet werden.
-
-| *Standardanzahl Boxen*
-|Wie viele Aufträge möchtest du standardmäßig auf einmal picken? Wenn du die rollende Kommissionierung später nutzt, ist die hier ausgewählte Anzahl voreingestellt. Während der Nutzung kannst du die Anzahl jedoch manuell erhöhen oder verringern.
-
-| *Vorlage*
-|Wie soll deine <<#1000, Artikelliste>> aussehen? Die plentymarkets App verfügt bereits über eine Standard-Vorlage, die für die meisten Kommissionierungsprozesse geeignet ist. Du kannst allerdings auch weitere Vorlagen im Menü *Einrichtung » plenty App » Mobile Pickliste* erstellen und dann hier in dieser Dropdown-Liste auswählen. +
-*_Tipp:_* Mit Vorlagen kannst du z.B. bestimmen, in welcher Reihenfolge und in welcher Schriftgröße einzelne Informationen später auf der Artikelliste dargestellt werden sollen.
 |====
 
 [#800]
-== Mit der plentymarkets App kommissionieren
+== Mit der plentyWarehouse App kommissionieren
 
-Nachdem du alle <<#700, Einstellungen einmalig vorgenommen>> hast, kannst du die plentymarkets App nutzen, um mehrere Aufträge gleichzeitig zu picken und versandfertig vorsortiert an den Packtisch zu liefern.
+Nachdem du alle vorbereitenden Einstellungen vorgenommen hast, kannst du die plentyWarehouse App nutzen, um mehrere Aufträge gleichzeitig zu picken und versandfertig vorsortiert an den Packtisch zu liefern.
 
 [IMPORTANT]
 .Stehen Aufträge bereit?
 ====
-Aufträge werden nur mit der App kommissioniert, wenn sie die Kriterien aus den <<#700, Einstellungen>> erfüllen, d.h. wenn sie sich auf das richtige Lager beziehen und sich aktuell im Ausgangsstatus befinden. Erfüllen zur Zeit keine Aufträge diese Kriterien, stehen keine Aufträge zum Kommissionieren bereit.
+Aufträge werden nur mit der App kommissioniert, wenn sie die Kriterien aus den <<#700, Einstellungen>> erfüllen, also wenn sie sich auf das richtige Lager beziehen und sich aktuell im ausgewählten Ausgangsstatus befinden. Erfüllen zur Zeit keine Aufträge diese Kriterien, sind keine Aufträge für die rollende Kommissionierung verfügbar.
 ====
 
 [#900]
 === Anzahl der Boxen festlegen
+
+//TODO: Update: RollKo starten; Screenshot
 
 Wie viele Boxen sind auf dem rollenden Kommissionierwagen? Lege zuerst fest, mit wie vielen Boxen du arbeiten möchtest, d.h. wie viele Aufträge gleichzeitig kommissioniert werden sollen.
 
 [.instruction]
 Anzahl der Boxen festlegen:
 
-. xref:app:installation.adoc#1200[Melde dich in der plentymarkets App an].
-. Tippe oben links auf das *Menüsymbol* (icon:bars[role="blue"]).
-. Tippe auf *Lagerverwaltung » Rollende Kommissionierung*. +
+. xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
+. Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links. +
+icon:map-signs[] *_Oder:_*: Finde die Kachel *Rollende Kommissionierung* im Bereich *Funktionen* auf dem Dashboard.
+. Tippe auf *Rollende Kommissionierung*. +
 → Der Startbildschirm wird angezeigt.
 . Tippe auf das Plus oder Minus, um die <<Einstellungen in der plentymarkets App vornehmen, vordefinierte Anzahl>> der Boxen zu erhöhen oder zu verringern.
 . Tippe auf *Start*, um fortzufahren. +
-→ Die entsprechenden Aufträge werden auf eine Artikelliste gestellt und in den selbst festgelegten <<Einstellungen in der plentymarkets App vornehmen, neuen Status>> gesetzt.
+→ Die entsprechenden Aufträge werden auf eine Artikelliste gestellt und in den selbst festgelegten neuen Status gesetzt.
 
 
 [#1000]
@@ -194,7 +180,7 @@ Anzahl der Boxen festlegen:
 
 plentymarkets erstellt automatisch eine Auflistung aller Artikel, die nun im Lager gepickt werden sollen. Dabei werden gleiche Artikel gruppiert. Kommt der gleiche Artikel beispielsweise in zwei verschiedenen Aufträgen vor, sieht das Lagerpersonal direkt, dass zwei Exemplare gepickt werden sollen.
 
-Die Liste enthält wichtige Informationen zu den Artikeln, die gepickt werden sollen. Das Lagerpersonal sieht nicht nur, wie viele Exemplare eines Artikels gepickt werden sollen, sondern auch, wo er diesen Artikel im Lager findet und wie der Artikel heißt.
+Die Liste enthält wichtige Informationen zu den Artikeln, die gepickt werden sollen. Das Lagerpersonal sieht nicht nur, wie viele Exemplare eines Artikels gepickt werden sollen, sondern auch den Artikelnamen und den Lagerort des Artikels.
 
 Nun läuft das Lagerpersonal mit dem Kommissionierwargen zum Lagerort des ersten Artikels. Dort angekommen, scannt das Lagerpersonal den Barcode des ersten Artikels. Alternativ kann in der App auf den Artikel getippt werden.
 
@@ -205,28 +191,10 @@ Mit der Artikelliste arbeiten:
 . Laufe mit dem Kommissionierwagen zum Artikel.
 . Scanne den Barcode des Artikels oder tippe in der App auf den Artikel.
 
-[TIP]
-.Von der vorgegebenen Pick-Reihenfolge abweichen
-====
-Beim Erstellen der Artikelliste berechnet plentymarkets eine wegoptimierte Route durch das Lager. Mit anderen Worten listet plentymarkets die Artikel in der Reihenfolge auf, die am günstigsten zu picken ist. Falls das Lagerpersonal aber trotzdem von der vorgegebenen Reihenfolge abweichen möchte, braucht es nur auf das Dreipunktmenü zu tippen.
-
-Nun kann das Lagerpersonal entscheiden, wie es weitergehen soll. Diese Möglichkeiten gibt es:
-
-* Den ersten Artikel ans Ende der Liste schieben, z.B. wenn dieser Artikel später gepickt werden soll.
-* Den ersten Artikel gänzlich von der Liste entfernen, z.B. wenn der Artikel zur Zeit nicht vorrätig ist. In diesem Fall werden alle Aufträge, die diesen Artikel enthalten, in einen <<#700, Fehlerstatus>> gesetzt.
-* Eine Notiz hinterlegen. Die Notiz wird an allen Aufträge, die diesen Artikel enthalten, hinterlegt.
-====
-
 [#1100]
 === Auftrag mit einer Box verknüpfen
 
-In welcher Box willst du diesen Artikel zwischenlagern? Scanne eine leere Box oder tippe auf eine leere Box in der App. Somit werden Auftrag und Box miteinander verknüpft.
-
-[TIP]
-.Entscheidungshelfer
-====
-Hast du Boxen in unterschiedlichen Größen und bist nicht sicher, welche Box du wählen sollst? Streiche mit dem Finger nach links über den Bildschirm, um Informationen zum Auftrag zu finden. Hier siehst du die Größe des Auftrags und kannst somit besser einschätzen, welche Box geeignet ist.
-====
+In welcher Box willst du diesen Artikel zwischenlagern? Scanne eine leere Box oder tippe auf eine leere Box in der App. So werden Auftrag und Box miteinander verknüpft.
 
 [IMPORTANT]
 .Aufträge mit mehreren Artikeln
@@ -237,11 +205,7 @@ Manche Aufträge enthalten mehr als nur einen Artikel. Hast du bereits den erste
 [#1200]
 === Artikel picken
 
-Die App zeigt dir einige wichtige Informationen zum Pickvorgang an. Du siehst zum Beispiel:
-
-* wie viele Exemplare des Artikels gepickt werden sollen
-* an welchem Lagerort der Artikel sich aktuell befindet
-* in welche Box du die Exemplare des Artikels legen sollst
+plentyWarehouse zeigt dir einige wichtige Informationen zum Pickvorgang an. Somit siehst du die Anzahl der Artikel, die gepickt werden sollen, so wie den Lagerort, an dem sich die Artikel befinden.
 
 [.instruction]
 Artikel picken:
@@ -251,11 +215,64 @@ Artikel picken:
 *_Hinweis:_* Beim Scannen erhöht sich die Anzahl automatisch um eins.
 . Lege die Exemplare in die entsprechende Box.
 . Scanne die soeben gepickte Box oder tippe auf das grüne Häkchen, um den Pickvorgang abzuschließen. +
-→ Im Hintergrund verknüpft plentymarkets den Artikel mit der Box. Der Lagerort des Artikels wird somit auf den temporären Lagerort geändert. Im plentymarkets System ist eine xref:warenwirtschaft:warenbestaende-verwalten.adoc#1100[Warenbewegung] zu sehen.
+→ Im Hintergrund verknüpft plentymarkets den Artikel mit der Box. Der Lagerort des Artikels wird somit auf diesen temporären Lagerort geändert. Im plentymarkets System ist eine xref:warenwirtschaft:warenbestaende-verwalten.adoc#1100[Warenbewegung] zu sehen.
 . Wiederhole Schritte 1 bis 4 für jeden Auftrag, der diesen Artikel enthält. +
 → Wurde dieser Artikel fertig gepickt, wechselt der Bildschirm zurück zur <<#1000, Artikelliste>> und du kannst mit dem nächsten Artikel fortfahren. +
-→ Wurden alle Artikel fertig gepickt, wird eine Erfolgsmeldung angezeigt.
-. Klicke auf *Abschließen*, um die Erfolgsmeldung zu schließen.
+→ Wurden alle Artikel fertig gepickt, wird der Abschlussbildschirm angezeigt. 
+. Klicke auf das rote Häkchen, um die rollende Kommissionierung abzuschließen.
+
+
+[#1300]
+=== Zusätzliche Aktionen für Artikel
+
+Während du <<#1200, Artikel pickst>>, kann es zu Sonderfällen kommen. Beispielsweise kann es sein, dass du einen Artikel ans Ende der Liste verschieben möchtest, weil du erst später am Lagerort des Artikels ankommst. Außerdem kann es sein, dass ein Artikel am Lagerort nicht vorrätig ist oder du eine Notiz mit einem Hinweis zum Auftrag hinterlassen möchtest.
+
+Dazu stehen dir in der Ansicht des jeweiligen Artikels einige Shortcuts zur Verfügung, mit denen du diese Aktionen schnell durchführen kannst. <<table-box-picking-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
+
+[[table-box-picking-shortcuts]]
+.Verfügbare Shortcuts in der Artikelansicht
+[cols="2,1,6"]
+|====
+|Bedienelement |Symbol |Erläuterung
+
+|[intable-add-note]*Kommentar*
+|icon:chat[set=material]
+| Öffnet die Ansicht zur Eingabe einer Auftragsnotiz. Nutze diese Funktion, um einen Kommentar zu speichern, der in der späteren Abwicklung an jedem Auftrag, in dem der Artikel vorhanden ist, im Backend deines plentymarkets System einsehbar ist.
+
+|[#intable-enter-quantity]*Menge eingeben*
+|icon:iso[set=material]
+| Öffnet die Ansicht zur Eingabe der Artikelmenge.
+
+| *Artikel verschieben*
+|icon:low_priority[set=material]
+| Verschiebt den Artikel an das Ende der Pickliste. Diese Funktion ist nützlich, wenn du einen Artikel vorerst überspringen möchtest, beispielsweise wenn er momentan nicht am angegebenen Lagerort vorhanden ist.
+
+| *Artikel entfernen*
+|icon:cancel[set=material]
+| Entfernt den Artikel von der Artikelliste. Nutze diese Funktion, wenn der betreffende Artikel nicht am Lagerort vorhanden ist. Optional kannst du im selben Schritt auch einen Kommentar eingeben, der als Auftragsnotiz gespeichert wird und am jedem Auftrag, in dem der Artikel enthalten ist, im plentymarkets Backend einsehbar ist. Außerdem wird der Auftrag in den Fehlerstatus verschoben.
+
+| *Artikelinformationen* 
+|icon:info[set=material]
+| Öffnet eine Seite mit weiteren Informationen zum Artikel. Je nachdem, welche du Einstellung für die Option xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#intable-other-settings[Shortcut-Verhalten]gewählt hast, erscheint eine Abfrage, ob du nach dem Aufrufen der Artikelinformationen automatisch zur Pickliste zurückgeleitet werden möchtest.
+
+|====
+
+
+[TIP]
+.Von der vorgegebenen Pick-Reihenfolge abweichen
+====
+Beim Erstellen der Artikelliste berechnet plentymarkets eine wegoptimierte Route durch das Lager. Mit anderen Worten listet plentymarkets die Artikel in der Reihenfolge auf, die am günstigsten zu picken ist. Falls das Lagerpersonal aber trotzdem von der vorgegebenen Reihenfolge abweichen möchte, braucht es nur auf das Dreipunktmenü zu tippen.
+
+Nun kann das Lagerpersonal entscheiden, wie es weitergehen soll. Diese Möglichkeiten gibt es:
+
+* Den ersten Artikel ans Ende der Liste schieben, z.B. wenn dieser Artikel später gepickt werden soll. --> ja, mit Shortcut
+
+
+
+* Den ersten Artikel gänzlich von der Liste entfernen, z.B. wenn der Artikel zur Zeit nicht vorrätig ist. In diesem Fall werden alle Aufträge, die diesen Artikel enthalten, in einen <<#700, Fehlerstatus>> gesetzt. --> Shortcut rotes X, dann kann man optional eine Auftragsnotiz eingeben. 
+* Eine Notiz hinterlegen. Die Notiz wird an allen Aufträge, die diesen Artikel enthalten, hinterlegt. --> geht beides nur wenn man schon auf den Lagerort getippt hat. Sprechblasen Shortcut; Shortcuts siehe Screenshot
+====
+
 
 [TIP]
 .Nicht genügend Exemplare vorrätig?
@@ -269,5 +286,3 @@ Sind an einem Lagerort nicht genügend Exemplare eines Artikels vorrätig? Solls
 Sobald alle Boxen mit Artikeln befüllt sind, läuft das Lagerpersonal zum Packtisch zurück. Nun wird die erste Box gescannt und somit der entsprechende Auftrag aufgerufen. Das Lagerpersonal xref:automatisierung:prozesse-ausfuehren.adoc#[wickelt diesen Auftrag wie gewohnt ab]. Dabei wird der Warenausgang vom Transferlagerort, d.h. von der Box, gebucht.
 
 Am Ende dieses Vorgangs wird die Verbindung zwischen Auftrag und Box aufgelöst. Somit steht die Box wieder zur Verfügung und kann vom Lagerpersonal beim nächsten Durchlauf erneut verwendet werden.
-
-////
