--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -7,30 +7,29 @@
 :manual:
 
 ////
-zuletzt bearbeitet 20.04.2022
+zuletzt bearbeitet 11.05.2022
 ////
 
 //ToDo - once the UI texts are updated, check to make sure the UI texts match the texts in the manual page
 //ToDo - Positionsnummer auf 40 setzen, um wieder sichtbar zu schalten
-//ToDo - add non-included info (e.g. first sentences of chapters)
 //ToDo - check whether the data fields work the same way in the old and new ui and if not then modify the includes
-//ToDo - add descriptions for Variante > Zusätzliche SKU
-//ToDo - move FAQ section to other pages where it makes more sense
 //ToDo - search for and fix comments
 //ToDo - add info that you have to reload the item after you link the images
-//ToDo - anker and links prüfen
+//ToDo - anker(done) and links prüfen
 //ToDo - sind weitere Bilder nötig? Yes, GIFs
 
 Diese Seite dient lediglich als Referenz.
 Sie erklärt die verschiedenen Elemente und Datenfelder eines Artikeldatensatzes.
 Links führen zu weiteren Informationen und Schritt-für-Schritt-Anleitungen, die die einzelnen Datenfelder in einen größeren Zusammenhang stellen.
 
+////
 [IMPORTANT]
 .Einstellungen sind je nach Artikeltyp unterschiedlich
 ====
 Je nachdem, mit welchem xref:artikel:artikel-manuell-anlegen.html#200[Artikeltyp] du arbeitest, wirst du einige der auf dieser Seite beschriebenen Einstellungen sehen und andere nicht.
 Keine Sorge - plentymarkets blendet automatisch die Einstellungen ein, die für den Artikeltyp relevant sind, und verbirgt den Rest.
 ====
+////
 
 [TIP]
 .Grundlegende Infos zur Artikelverwaltung
@@ -81,6 +80,7 @@ xref:artikel:artikel-manuell-anlegen.adoc#500[Mehr zum Thema Vorschau].
 
 |====
 
+[#30]
 === Bestand
 
 Hier siehst du eine Übersicht deiner Artikelbestände.
@@ -212,7 +212,7 @@ Dieser Nachschub-Wert gibt an, wie viele Einheiten derzeit an dein Lager geliefe
 
 |====
 
-[#100]
+[#40]
 === Bilder
 
 //tag::images[]
@@ -447,8 +447,20 @@ Dadurch wird die Liste der angezeigten Bilder eingegrenzt.
 --
 //end::images[]
 
-[#90]
+[#50]
 === Texte
+
+Hier speicherst du Artikeltexte, wie einen Vorschautext, technische Daten und Keywords.
+
+[TIP]
+.Lieber variantenspezifische Texte speichern?
+====
+Die Texte, die hier gespeichert sind, gelten für den ganzen Artikel. Das heißt, die Texte gelten für alle Varianten.
+Es ist aber auch möglich, variantenspezifische Texte zu speichern.
+
+. Zuerst erstellst du xref:artikel:eigenschaften.adoc#500[Eigenschaften] vom Typ *Text* oder *HTML*.
+. Dann xref:artikel:eigenschaften.adoc#1400[verknüpfst du diese Eigenschaften] mit bestimmten Varianten.
+====
 
 [cols="1,4a"]
 |====
@@ -493,8 +505,10 @@ include::partial$meta-keywords.adoc[]
 
 |====
 
-[#30]
+[#60]
 === Einstellungen
+
+Dieses Element enthält grundlegende Artikeloptionen.
 
 [cols="1,4a"]
 |====
@@ -550,8 +564,12 @@ include::partial$typ-warentyp.adoc[]
 
 |====
 
-[#40]
+[#70]
 === Multi-Channel
+
+Diese Einstellungen beziehen sich auf xref:maerkte:ebay-einrichten.adoc#5500[Listing-Vorlagen].
+Die Grundidee ist einfach.
+Anstatt die Einstellungen für jedes einzelne eBay, Hood oder Ricardo Angebot einzeln vorzunehmen, erstellst du eine Vorlage für die üblichen Angebotseinstellungen.
 
 [cols="1,4a"]
 |====
@@ -573,8 +591,10 @@ include::partial$ebay-shop-kategorie.adoc[]
 
 |====
 
-[#50]
+[#80]
 === Amazon
+
+Mit den Einstellungen in diesem Element kannst du deine Artikel für den xref:maerkte:amazon.adoc#[Verkauf auf Amazon] vorbereiten.
 
 [cols="1,4a"]
 |====
@@ -594,7 +614,7 @@ include::partial$amazon-fba.adoc[]
 
 |====
 
-[#60]
+[#90]
 === Versandprofile
 
 [cols="1,4a"]
@@ -607,7 +627,7 @@ Wenn ein Auftrag Artikel enthält, bei denen kein Versandprofil aktiviert wurde,
 
 |====
 
-[#70]
+[#100]
 === Webshop
 
 [cols="1,4a"]
@@ -620,7 +640,7 @@ include::partial$shop-aktion.adoc[]
 
 |====
 
-[#80]
+[#110]
 === Ebay Titel
 
 [cols="1,4a"]
@@ -640,7 +660,7 @@ Durch diese Verknüpfung ist es also möglich, Listings, die du mit anderen Tool
 
 |====
 
-[#140]
+[#120]
 === Cross Selling
 
 Beim xref:artikel:cross-selling.adoc#[Cross-Selling] ermutigst du Kunden subtil, mehr Geld auszugeben.
@@ -659,19 +679,19 @@ Falls erforderlich, kannst du den Artikel mit beliebig vielen anderen Produkten 
 . Wähle die passende Beziehung aus der Dropdown-Liste aus.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
-[#25]
+[#130]
 === Eigenes Portlet
 
 include::page$detailansicht.adoc[tag=own-portlet]
 
-[#150]
+[#140]
 == Varianten-Ebene
 
 In diesem Kapitel werden die Elemente und Datenfelder erläutert, die auf der Varianten-Ebene verfügbar sind.
 
 image::artikel:varianten-ebene-elemente.png[]
 
-[#160]
+[#150]
 === Toolbar
 
 ////
@@ -708,16 +728,24 @@ xref:artikel:artikel-manuell-anlegen.adoc#500[Mehr zum Thema Vorschau].
 
 |====
 
-
+[#160]
 === Eigenschaften
 
 Hier siehst du die Eigenschaften der Variante.
 Falls erforderlich, kannst du hier weitere Eigenschaften manuell mit der Variante verknüpfen.
 
-IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:eigenschaften.adoc#500[Eigenschaften] bereits in plentymarkets konfiguriert hast.
+[IMPORTANT]
+.Voraussetzung
+====
+Dies setzt voraus, dass du die nötigen xref:artikel:eigenschaften.adoc#500[Eigenschaften] bereits in plentymarkets konfiguriert hast.
+====
+
+[.collapseBox]
+.*Eine einzelne Eigenschaft mit der Variante verknüpfen*
+--
 
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Linke Navigation: Eigenschaften*.
-. Klicke auf icon:plus[role="darkGrey"]. +
+. Klicke auf icon:plus[role="darkGrey"] und dann auf *Eigenschaften hinzufügen*. +
 → Es öffnet sich ein Pop-up-Fenster.
 . Wähle die Eigenschaften aus, die du verknüpfen möchtest (icon:check-square[role="blue"]).
 . Klicke auf *Übernehmen*. +
@@ -726,6 +754,29 @@ IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:eigenschaften.ad
 Handelt es sich bei der Eigenschaft z.B. um ein Gewicht oder eine Länge, dann muss der numerische Wert noch eingegeben werden.
 Weitere Informationen findest du in der folgenden Tabelle.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+//#gif#
+
+--
+
+[.collapseBox]
+.*Eine ganze Gruppe von Eigenschaften mit der Variante verknüpfen*
+--
+
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Linke Navigation: Eigenschaften*.
+. Klicke auf icon:plus[role="darkGrey"] und dann auf *Eigenschaftsgruppen hinzufügen*. +
+→ Es öffnet sich ein Pop-up-Fenster.
+. Wähle die Gruppen aus, die du verknüpfen möchtest (icon:check-square[role="blue"]).
+. Klicke auf *Übernehmen*. +
+→ Die Daten werden als Tabelle dargestellt.
+. Je nach Eigenschaftstyp musst du noch zusätzliche Informationen eingeben.
+Handelt es sich bei der Eigenschaft z.B. um ein Gewicht oder eine Länge, dann muss der numerische Wert noch eingegeben werden.
+Weitere Informationen findest du in der folgenden Tabelle.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+//#gif#
+
+--
 
 [cols="1,4a"]
 |====
@@ -826,6 +877,7 @@ xref:artikel:personalisierte-artikel.adoc#[Weitere Informationen zur Vorgehenswe
 
 --
 
+////
 //check this to make sure it's true
 [TIP]
 .Vererbungslogik
@@ -847,9 +899,12 @@ Klicke auf icon:delete[set=material, role="darkGrey"] *Verknüpfung Löschen*, u
 * Entfernst du die Eigenschaft aus einer Hauptvariante? Dann wird die Eigenschaft auch aus allen Untervarianten entfernt, die diese Eigenschaft zuvor geerbt hatten.
 * Enternst du die Eigenschaft aus einer Unterviariante, für die die Vererbung aktiviert ist? Dann wird die Vererbung deaktiviert. Die verbleibenden Eigenschaften werden nicht mehr geerbt, sondern werden direkt an der Untervariante gespeichert.
 ======
+////
 
 [#170]
 === Einstellungen
+
+Dieses Element enthält grundlegende Optionen für die Variante.
 
 [cols="1,4a"]
 |====
@@ -918,6 +973,12 @@ include::partial$grundpreisanzeige.adoc[]
 
 [#190]
 === Kosten
+
+[TIP]
+.Preiskalkulation
+====
+Diese Angaben fließen mit in die xref:artikel:preise.adoc#1000[Preiskalkulation] deiner Verkaufspreise ein.
+====
 
 [cols="1,4a"]
 |====
@@ -1002,12 +1063,14 @@ include::partial$portoaufschlag.adoc[]
 . Die Tags werden als sogenannte "Chips" angezeigt.
 
 *_Hinweis_*:
-Die Dropdown-Liste enthält nur die Tags, die für den Bereich *Variante* verfügbar gemacht wurden.
+Die Dropdown-Liste enthält nur die Tags, die für Varianten verfügbar sind.
 
 |====
 
 [#220]
 === Verfügbarkeit und Sichtbarkeit
+
+Die Einstellungen in diesem Element steuern, _wann_ die Variante sichtbar und kaufbar sein soll.
 
 [cols="1,4a"]
 |====
@@ -1163,20 +1226,6 @@ In diesem Fall steht nur die Option *Keine Konto-Zuordnung verwenden* zur Verfü
 → Die Daten werden als Tabelle dargestellt.
 . Gib die SKU und Parent-SKU ein.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
-
-////
-[#250]
-=== Zusätzliche SKU
-
-[cols="1,4a"]
-|====
-|Einstellung |Erläuterung
-
-|
-|
-
-|====
-////
 
 [#260]
 === Barcodes
@@ -1337,7 +1386,6 @@ Die Sichtbarkeit eines Artikels im plentyShop wird über verschiedene Einstellun
 Mehr über diese Einstellungen erfährst du in unserer xref:artikel:checkliste-artikel-anzeige.adoc#[Checkliste zur Artikelsichtbarkeit im plentyShop].
 ====
 
-
 [#290]
 === Mandant (Shop)
 
@@ -1452,13 +1500,17 @@ Wenn die Rabattfähikgeit nicht gesetzt ist, wird der eingetragene Rabatt für N
 Gib die Verpackungseinheit (VPE) des Lieferanten ein, wenn sie von dem abweicht, was du xref:artikel:verzeichnis.adoc#270[im Varianten-Datensatz gespeichert] hast.
 |====
 
-
 [#310]
 === Lager
 
+//zukunft - sobald die neue artikel-ui die haupt-ui ist, kann diesen Kapitel als ein include Datei mit Tags gemacht werden, die auch auf die Seite waren:variations-track-stock.adoc ausgegeben wird
+
 Wo wird die Variante gelagert?
 Ordne deine Varianten dem passenden Lagerort zu.
-Indem du diese Daten in plentymarkets speicherst, kannst du später xref:warenwirtschaft:wareneingaenge-verwalten.adoc#450[den Wareneingang buchen].
+Dies ist nützlich, damit du später:
+
+* xref:warenwirtschaft:wareneingaenge-verwalten.adoc#450[den Wareneingang buchen kannst].
+* xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#[Waren nachbestellen kannst, wenn sie zur Neige gehen].
 
 [TIP]
 .Hast du bereits Lager-Informationen gespeichert?
@@ -1479,7 +1531,7 @@ Lager hinzufügen:
 → Die Daten werden als Tabelle dargestellt.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
-//zukunft - die beschreibungen in der tabelle verständlicher machen (siehe Schulung mit Oskar) und auch mit den Beschreibungen unter warenwirtschaft:wareneingaenge-verwalten.adoc#200 angleichen - dafür includes verwenden
+//zukunft - die beschreibungen in der tabelle verständlicher machen (siehe Schulung mit Oskar) und auch mit den Beschreibungen unter warenwirtschaft:variations-track-stock.adoc angleichen - dafür includes verwenden
 
 [cols="1,4a"]
 |====
@@ -1691,7 +1743,7 @@ Dieser Nachschub-Wert gibt an, wie viele Einheiten derzeit an dein Lager geliefe
 
 include::page$verzeichnis.adoc[tag=images]
 
-[#370]
+[#340]
 === Verkaufspreise
 
 Hier siehst du die Verkaufspreise, die bereits mit der Variante verknüpft sind.
@@ -1760,11 +1812,12 @@ Wenn du eigene Verkaufspreise an den Untervarianten pflegen möchtest, deaktivie
 ====
 ////
 
+[#350]
 === Paket
 
 //zukunft - die Artikelpakete Seite gründlich überarbeiten und includes verwenden, um die Inhalte auch hier auszugeben
 
-Ein Artikelpaket besteht aus mehreren Produkten.
+Ein xref:artikel:multipacks-pakete-sets-verwalten.adoc#2000[Artikelpaket] besteht aus mehreren Produkten.
 Zum Beispiel ein Bartpflege-Kit bestehend aus einer Schere, einer Bürste, Bartöl und Bartwachs.
 
 In diesem Element:
@@ -1773,10 +1826,9 @@ In diesem Element:
 Falls erforderlich, kannst du weitere Bestandteile hinzufügen.
 * kannst du Einstellungen wählen, um das Gewicht und den Einkaufspreis automatisch für Artikelpakete berechnen zu lassen.
 
----
-
-[discrete]
-==== Bestandteile zum Paket hinzufügen
+[.collapseBox]
+.*Bestandteile zum Paket hinzufügen*
+--
 
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Paket*.
 . Klicke im Element auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:plus[role="darkGrey"] *Paketbestandteile hinzufügen*. +
@@ -1787,10 +1839,11 @@ Falls erforderlich, kannst du weitere Bestandteile hinzufügen.
 . Gib die Menge ein.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
----
+--
 
-[discrete]
-==== Gewicht und Preis automatisch berechnen lassen
+[.collapseBox]
+.*Gewicht und Preis automatisch berechnen lassen*
+--
 
 Ein Artikelpaket ist eine Zusammenstellung mehrerer Bestandteile.
 Jeder Bestandteil verfügt wiederum über wichtige Kennzahlen, wie Gewicht und Einkaufspreis.
@@ -1850,6 +1903,9 @@ Verwende dabei folgende Optionen:
 * *Paketautomatik für GLD EKs*
 ====
 
+--
+
+[#360]
 === Notizen
 
 ////
@@ -1907,24 +1963,111 @@ Mit anderen Worten:
 ====
 ////
 
-[#165]
+[#370]
 === Eigenes Portlet
 
 include::page$detailansicht.adoc[tag=own-portlet]
 
-
-////
-
+[#380]
 == Fragen und Antworten
 
-//keine FAQ Kapitel in diese Seite, da sie eine Referenz-Seite ist - stattdessen in eine/mehrere andere Seiten verankern
+[.collapseBox]
+.*Auf dieser Seite wird ein Element oder Datenfeld erwähnt, das ich in meinem eigenen System nicht finde. Warum?*
+--
 
-//In wie fern kann ich die Ansicht personalisieren? Link zu Gestaltung Seite
-//-Hinweise für Mitarbeiter schreiben
-//-Entscheiden welche Felder da sind und in welche Reihenfolge
-//-Rechteverwaltung
-//-Portlets umbenennen
+Du kannst die Produkt-Ansicht an deine eigene Bedürfnisse anpassen.
+Das heißt, du kannst selbst entscheiden, welche Datenfelder benötigt werden und in welche Reihenfolge sie erscheinen sollen.
+Diese Seite dient lediglich als Referenz und erklärt alle Elemente und Datenfelder, die in eine Produktansicht einfließen können.
+Dein eigenes System kann abweichen, je nachdem, wie es gestaltet wurde.
+xref:artikel:detailansicht.adoc#[Weitere Informationen zur Gestaltung].
 
-//Vererbung - z.B. warum sind Preise automatisch da?
+--
 
-//Artikel-ID ändern wird nicht mehr gehen in die neue UI. Das selbe auch mit Varianten-ID.
+[.collapseBox]
+.*Ich will die Produkt-Ansicht anpassen, d.h. entscheiden, welche Datenfelder sie enthält. Wie mache ich das?*
+--
+
+Du kannst die Produkt-Ansicht an deine eigene Bedürfnisse anpassen.
+Das heißt, du kannst selbst entscheiden, welche Datenfelder benötigt werden und in welche Reihenfolge sie erscheinen sollen.
+xref:artikel:detailansicht.adoc#[Weitere Informationen zur Gestaltung].
+
+--
+
+[.collapseBox]
+.*Welche Zugriffsrechte benötigen Mitarbeiter, um mit der Artikel-UI arbeiten zu können?*
+--
+
+*_Allgemeine Zugriffsrechte_*:
+
+Personen mit Backend-Zugriffsrechten können nur mit der Artikel-UI arbeiten, wenn ein Admin ihnen Zugriff gewährt hat:
+
+. Wende dich an eine Person mit Administratorrechten für das plentymarkets-System.
+. Diese Person öffnet das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer*.
+. Dann öffnet sie das Benutzerkonto und schaltet die notwendigen Rechte frei.
+* *_Tipp_*: Welche Rechte du genau aktivieren musst, hängt davon ab, was genau der Mitarbeiter tun soll.
+Ein Beispiel für nützliche Rechte eines Content-Mitarbeiters, findest du unten.
+* *_Tipp_*: Bevor du Mitarbeitern pauschale Rechte erteilst, solltest du die fertige Konfiguration in einem Backend-Benutzerkonto testen und sicherstellen, dass sie deinen Anforderungen entspricht.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+. Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/item/18[Supporter im Forum^].
+
+.Beispiel-Rechte eines Content-Mitarbeiters
+[cols="1a,1a"]
+|====
+|Berechtigungen |Menü-Sichtbarkeiten
+
+|Erforderlich:
+
+* *Artikel » Neue Artikel UI » Anzeigen*
+
+Empfohlen:
+
+* *Artikel » [Alle Unterpunkte] » Anzeigen*
+* *Artikel » [Alle Unterpunkte] » [Weitere Rechte bei Bedarf]*
+* *Einrichtung » Tag » Anzeigen*
+* *Einrichtung » Tag » Tag-Verknüpfung » [Alle Unterpunkte]*
+
+|Erforderlich:
+
+* *Artikel » Artikel-UI*
+
+Empfohlen:
+
+* *Artikel » [Alle Unterpunkte]*
+* *Einrichtung » Einstellungen » Tags*
+* *Einrichtung » Artikel » [Einzelne Rechte bei Bedarf]*
+|====
+
+---
+
+*_Rechte zu einer bestimmten Ansicht_*:
+
+Admin-Nutzer können den Zugriff auf jede Ansicht einzeln gewähren.
+
+. Wende dich an eine Person mit Administratorrechten für das plentymarkets-System.
+. Diese Person öffnet das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer*.
+. Dann öffnet sie das Benutzerkonto und klickt auf *Ansichten*.
+. Erweitere die Listeneinträge (icon:chevron-right[role="darkGrey"]) und wähle die Ansichten (icon:check-square[role="blue"]), auf die der Benutzer Zugriff haben soll.
+. Speichere (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+---
+
+*_Rechte zur Gestaltung der Produkt-Ansichten_*:
+
+Nur xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[Admin-Nutzer] können Ansichten erstellen und bearbeiten.
+Falls du kein Admin bist:
+
+. Wende dich an eine Person mit Admin-Rechten.
+. Bitte sie, die erforderlichen xref:artikel:detailansicht.adoc#300[Ansichten zu erstellen] und sie deinem xref:artikel:detailansicht.adoc#900[Benutzerkonto zuzuweisen].
+
+
+--
+
+////
+[.collapseBox]
+.*Wie funktioniert die Vererbung?*
+--
+
+Text
+
+--
+////
