--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -103,8 +103,6 @@ Bestehende Abwicklungsprozesse anpassen:
 [#700]
 === Einstellungen in der plentyWarehouse App vornehmen
 
-//TODO: Settings Menü beschreiben; Screenshot
-
 Bevor du <<#800, die rollende Kommissionierung nutzen kannst>>, musst du ein paar Einstellungen einmalig in der plentyWarehouse App vornehmen. Diese Einstellungen bestimmen z.B., wie viele Aufträge auf einmal gepickt werden sollen und wie die App im Fehlerfall vorgehen soll.
 
 [.instruction]
@@ -123,24 +121,54 @@ Einstellungen vornehmen:
 |====
 |Einstellung |Erläuterung
 
+2+^| Bereich *Allgemeine Einstellungen*
 | *Lager*
 |In welchem Lager möchtest du picken? Wenn du die rollende Kommissionierung später nutzt, werden nur Aufträge, die sich in diesem Lager befinden, auf deiner Artikelliste angezeigt. +
-*_Tipp:_* Die xref:warenwirtschaft:lager-einrichten.adoc#200[Lager] in dieser Dropdown-Liste können unter *Einrichtung » Waren » Lager* verwaltet werden.
+*_Tipp:_* Die xref:warenwirtschaft:lager-einrichten.adoc#200[Lager] in dieser Dropdown-Liste verwaltest du im Backend deines plentymarkets Systems unter *Einrichtung » Waren » Lager*.
 
 | *Standardanzahl Boxen*
-|Wie viele Aufträge möchtest du standardmäßig auf einmal picken? Wenn du die rollende Kommissionierung später nutzt, ist die hier ausgewählte Anzahl voreingestellt. Während der Nutzung kannst du die Anzahl jedoch manuell erhöhen oder verringern.
+|Eine Box steht für einen Auftrag, der kommissioniert wird. Wähle hier aus, wie viele Aufträge du standardmäßig auf einmal picken möchtest. Wenn du die rollende Kommissionierung später nutzt, ist die hier ausgewählte Anzahl voreingestellt. Bevor du mit der rollenden Kommissionierung beginnst, kannst du diese Anzahl manuell erhöhen oder verringern.
 
-| *Ausgangsstatus*
+| *Bestätigungsdialog vor Umbuchung anzeigen*
+|Wenn du diese Option aktivierst, wirst du bei jedem Artikel, den du während der rollenden Kommissionierung pickst, gefragt, ob der Artikel wirklich in die Box gelegt werden soll. Du kannst erst mit dem nächsten Artikel fortfahren, wenn du diese Abfrage bestätigt hast.
+
+| *Lagerort-Scan verpflichtend*
+|Wie sollen die Boxen für die rollende Kommissionierung ausgewählt werden? +
+*Aktiviert* (icon:toggle-on[role="green"]) = Boxen _müssen_ per Scan ausgewählt werden, damit anschließend Artikel gebucht werden können. +
+*Nicht aktiviert* (icon:toggle-off[role="darkGrey"]) = Boxen können manuell ausgewählt werden, indem du auf sie tippst.
+
+| *Sortierung der Aufträge*
+|Diese Einstellung bestimmt, 
+
+2+^| Bereich *Status*
+
+| *Quellstatus*
 |Welche Aufträge möchtest du picken? Wenn du die rollende Kommissionierung später nutzt, werden nur Aufträge, die sich in diesem Status befinden, auf deiner Artikelliste angezeigt. +
-*_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste können unter *Einrichtung » Aufträge » Status* verwaltet werden.
+*_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste verwaltest du im Backend deines plentymarkets System unter *Einrichtung » Aufträge » Status*.
 
-| *Neuer Status*
+| *Zielstatus*
 |Wie möchtest du Aufträge, die sich gerade im Pickvorgang befinden, kennzeichnen? Setze Aufträge in einen neuen Status, damit sie nicht aus Versehen mehrmals für den Pickvorgang zur Verfügung gestellt werden. +
-*_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste können unter *Einrichtung » Aufträge » Status* verwaltet werden.
+*_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste verwaltest du im Backend deines plentymarkets System unter *Einrichtung » Aufträge » Status*.
 
 | *Fehlerstatus*
-|Wie soll die App im Fehlerfall vorgehen? Kommt es beim Picken eines Auftrags zu einem Fehler, wird der Auftrag in den hier ausgewählten Status gesetzt. Später kannst du dann in plentymarkets alle fehlerhaften Aufträge anhand des Status suchen und diese gesondert abarbeiten. +
-*_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste können unter *Einrichtung » Aufträge » Status* verwaltet werden.
+|Wie soll die App im Fehlerfall vorgehen? Kommt es beim Picken eines Auftrags zu einem Fehler, wird der Auftrag in den hier gewählten Status gesetzt. Später kannst du dann in plentymarkets alle fehlerhaften Aufträge mit diesem Status suchen und diese gesondert abarbeiten. +
+*_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste verwaltest du im Backend deines plentymarkets System unter *Einrichtung » Aufträge » Status*.
+
+2+^| Bereich *Artikelerfassung*
+
+| *Scan verpflichtend*
+|
+
+| *Einzelerfassung bis Menge*
+|
+
+2+^| Bereich *Box-Auswahl*
+
+| *Lagerortsuchfelder*
+| 
+
+| *Fokus auf Lagerortsuchfeld*
+|
 
 |====
 
@@ -158,9 +186,7 @@ Aufträge werden nur mit der App kommissioniert, wenn sie die Kriterien aus den 
 [#900]
 === Anzahl der Boxen festlegen
 
-//TODO: Update: RollKo starten; Screenshot
-
-Wie viele Boxen sind auf dem rollenden Kommissionierwagen? Lege zuerst fest, mit wie vielen Boxen du arbeiten möchtest, d.h. wie viele Aufträge gleichzeitig kommissioniert werden sollen.
+Lege zuerst fest, mit wie vielen Boxen du arbeiten möchtest, d.h. wie viele Aufträge gleichzeitig kommissioniert werden sollen.
 
 [.instruction]
 Anzahl der Boxen festlegen:
@@ -170,9 +196,9 @@ Anzahl der Boxen festlegen:
 icon:map-signs[] *_Oder:_*: Finde die Kachel *Rollende Kommissionierung* im Bereich *Funktionen* auf dem Dashboard.
 . Tippe auf *Rollende Kommissionierung*. +
 → Der Startbildschirm wird angezeigt.
-. Tippe auf das Plus oder Minus, um die <<Einstellungen in der plentymarkets App vornehmen, vordefinierte Anzahl>> der Boxen zu erhöhen oder zu verringern.
+. Tippe auf das Plus oder Minus, um die <<Einstellungen in der plentymarkets App vornehmen, vordefinierte Anzahl>> der Boxen zu erhöhen oder zu verringern. //TODO: intable link
 . Tippe auf *Start*, um fortzufahren. +
-→ Die entsprechenden Aufträge werden auf eine Artikelliste gestellt und in den selbst festgelegten neuen Status gesetzt.
+→ Die entsprechenden Aufträge werden auf eine Artikelliste gestellt und in den von dir festgelegten Zielstatus //TODO: intable link gesetzt.
 
 
 [#1000]
@@ -221,7 +247,6 @@ Artikel picken:
 → Wurden alle Artikel fertig gepickt, wird der Abschlussbildschirm angezeigt. 
 . Klicke auf das rote Häkchen, um die rollende Kommissionierung abzuschließen.
 
-
 [#1300]
 === Zusätzliche Aktionen für Artikel
 
@@ -257,30 +282,12 @@ Dazu stehen dir in der Ansicht des jeweiligen Artikels einige Shortcuts zur Verf
 
 |====
 
+[#1400]
+=== Rollende Kommissionierung abschließen
 
-[TIP]
-.Von der vorgegebenen Pick-Reihenfolge abweichen
-====
-Beim Erstellen der Artikelliste berechnet plentymarkets eine wegoptimierte Route durch das Lager. Mit anderen Worten listet plentymarkets die Artikel in der Reihenfolge auf, die am günstigsten zu picken ist. Falls das Lagerpersonal aber trotzdem von der vorgegebenen Reihenfolge abweichen möchte, braucht es nur auf das Dreipunktmenü zu tippen.
+//TODO: Info über Endscreen
 
-Nun kann das Lagerpersonal entscheiden, wie es weitergehen soll. Diese Möglichkeiten gibt es:
-
-* Den ersten Artikel ans Ende der Liste schieben, z.B. wenn dieser Artikel später gepickt werden soll. --> ja, mit Shortcut
-
-
-
-* Den ersten Artikel gänzlich von der Liste entfernen, z.B. wenn der Artikel zur Zeit nicht vorrätig ist. In diesem Fall werden alle Aufträge, die diesen Artikel enthalten, in einen <<#700, Fehlerstatus>> gesetzt. --> Shortcut rotes X, dann kann man optional eine Auftragsnotiz eingeben. 
-* Eine Notiz hinterlegen. Die Notiz wird an allen Aufträge, die diesen Artikel enthalten, hinterlegt. --> geht beides nur wenn man schon auf den Lagerort getippt hat. Sprechblasen Shortcut; Shortcuts siehe Screenshot
-====
-
-
-[TIP]
-.Nicht genügend Exemplare vorrätig?
-====
-Sind an einem Lagerort nicht genügend Exemplare eines Artikels vorrätig? Sollst du z.B. drei Exemplare picken, aber nur zwei sind verfügbar? Dann musst du nicht den ganzen Pickvorgang abbrechen. Stelle einfach die Anzahl der verfügbaren Exemplare ein und tippe auf den braunen Pfeil. Daraufhin wird eine Meldung angezeigt, die dich auf die falsche Menge hinweist. Hier kannst du auch eine Notiz erstellen, die in deinem plentymarkets System direkt am Auftrag angehängt wird. Der Auftrag wird in den Fehlerstatus geschoben und kann später gesondert abgearbeitet werden.
-====
-
-[#1300]
+[#1500]
 === Artikel packen
 
 Sobald alle Boxen mit Artikeln befüllt sind, läuft das Lagerpersonal zum Packtisch zurück. Nun wird die erste Box gescannt und somit der entsprechende Auftrag aufgerufen. Das Lagerpersonal xref:automatisierung:prozesse-ausfuehren.adoc#[wickelt diesen Auftrag wie gewohnt ab]. Dabei wird der Warenausgang vom Transferlagerort, d.h. von der Box, gebucht.
