ADD screenshots pcl

--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -7,8 +7,7 @@ Auf dieser Handbuchseite erfährst du, wie du die Paketinhaltsliste 2.0 in plent
 
 Das Menü *Aufträge » Paketinhaltsliste 2.0* ist wie folgt aufgebaut:
 
-*[red]#Screenshot wird noch hinzugefügt#*
-image::fulfillment:paketinhaltsliste-2-0-menueaufbau.png[width=640, height=360]
+image::fulfillment:pcl-2-0-menu-overview-de.png[width=640, height=360]
 
 * *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Klicke auf icon:bars[], um die Navigationsleiste ein- und auszublenden. +
 * *Toolbar*: Hier kannst du nach Aufträgen <<#search-orders, suchen>>, die <<#spalten-konfigurieren, Spalten konfigurieren>>, die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Aufträgen klicken. +
@@ -55,7 +54,6 @@ Klicke dann auf icon:search[set=material], um die Suche auszuführen.
 .. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Beachte die Erläuterungen zu den Filtern in <<#table-search-orders>>.
 . Wenn du die Suche ausführst, siehst du die Ergebnisliste.
 
-*[red]#Screenshot wird noch hinzugefügt#*
 [[image-example-search-field]]
 .Beispiel: Suchfeld mit ID 140
 image::fulfillment:package-content-list-search-field-example.png[width=640, height=360]
@@ -111,7 +109,6 @@ Damit du einen häufig verwendeten Filter nicht jedes Mal beim Öffnen der Paket
 
 Du kannst einen Filter direkt beim Erstellen als Standard festlegen wie im Kapitel <<#aktuellen-filter-speichern, Aktuellen Filter speichern>> beschrieben oder du legst den Filter nachträglich aus der Übersicht heraus als Standard fest (siehe <<#image-filter-standard>>).
 
-*[red]#Screenshot wird noch hinzugefügt#*
 [[image-filter-standard]]
 .Filter als Standard festlegen
 image::fulfillment:package-content-list-default-filter.png[width=640, height=360]
@@ -188,8 +185,7 @@ Aktuelle Konfig anpassen (Titel des Buttons anpassen!)
 
 Paletten sind die größte Verpackungseinheit in einem Auftrag der Paketinhaltsliste und können Pakete und Artikel enthalten. Allerdings sind Paletten in der Paketinhaltsliste 2.0 nicht mehr notwendig, um ein Paket dem Fulfillment-Dienstleister zu übergeben. In der Abbildung siehst du die verschiedenen Ebenen eines Auftrags. In den folgenden Kapiteln ist beschrieben, wie du mit Paletten arbeitest.
 
-*[red]#Abbildung wird noch hinzugefügt#*
-image::auftraege:pcl-levels-de.png[]
+image::fulfillment:pcl-levels-de.png[]
 
 [#create-pallet]
 === Palette erstellen
