--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -153,6 +153,7 @@
 ** xref:fulfilment:shipping-centre.adoc[Using the shipping centre]
 ** xref:fulfilment:generating-documents.adoc[Generating documents]
 ** xref:fulfilment:amazon-fba-inbound.adoc[Amazon FBA Inbound]
+** xref:fulfilment:package-content-list-2-0.adoc[Package content list 2.0]
 ** xref:fulfilment:clc.adoc[CLC]
 ** xref:fulfilment:ebay-fulfillment-by-orange-connex.adoc[eBay Fulfillment by Orange Connex]
 ** xref:fulfilment:shipping-service-provider-plugins.adoc[Shipping service provider plugins]
